UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/CC_PropertyType__c.field-meta.xml
<CustomField>
    <fullName>CC_PropertyType__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apartments</fullName>
            </value>
            <value>
                <fullName>Combo (MDU/MTU)</fullName>
            </value>
            <value>
                <fullName>Condos</fullName>
            </value>
            <value>
                <fullName>Hotel/Motel</fullName>
            </value>
            <value>
                <fullName>MDU</fullName>
            </value>
            <value>
                <fullName>Mix MDU/SFU</fullName>
            </value>
            <value>
                <fullName>MTU</fullName>
            </value>
            <value>
                <fullName>MXU-Mix MTU/MDU</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Senior Living</fullName>
            </value>
            <value>
                <fullName>SFU</fullName>
            </value>
            <value>
                <fullName>CONDOMINIUM</fullName>
            </value>
            <value>
                <fullName>MOBILEHOME PARK</fullName>
            </value>
            <value>
                <fullName>COMMERCIAL - MISCELLANEOUS</fullName>
            </value>
            <value>
                <fullName>COMMERCIAL - NON-RETAIL</fullName>
            </value>
            <value>
                <fullName>COMMERCIAL - RETAIL</fullName>
            </value>
            <value>
                <fullName>EDUCATION</fullName>
            </value>
            <value>
                <fullName>GOVERNMENT</fullName>
            </value>
            <value>
                <fullName>HEAVY INDUSTRIAL</fullName>
            </value>
            <value>
                <fullName>HOSPITALITY</fullName>
            </value>
            <value>
                <fullName>INDUSTRIAL</fullName>
            </value>
            <value>
                <fullName>INSTITUTIONAL</fullName>
            </value>
            <value>
                <fullName>LAND</fullName>
            </value>
            <value>
                <fullName>MISCELLANEOUS</fullName>
            </value>
            <value>
                <fullName>OFFICE</fullName>
            </value>
            <value>
                <fullName>RELIGIOUS</fullName>
            </value>
            <value>
                <fullName>RESIDENTIAL - MDU</fullName>
            </value>
            <value>
                <fullName>RESIDENTIAL - NON-MDU</fullName>
            </value>
            <value>
                <fullName>SPORTS &amp; ENTERTAINMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>