UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/CCaaS_Intent__c.field-meta.xml
<CustomField>
    <fullName>CCaaS_Intent__c</fullName>
    <description>Intent Topics for array: Business Collaboration, Effective Communication, Cloud Backup &amp; Recovery, Cyber Security Services, Hybrid Working / Hybrid Workplace

For Zoominfo Intent Integration, introduced in 12/07 Release, 2023.</description>
    <inlineHelpText>Zoominfo Intent Integration</inlineHelpText>
    <label>CCaaS Intent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>