UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/CCID__c.field-meta.xml
<CustomField>
    <fullName>CCID__c</fullName>
    <inlineHelpText>Community Connections Identifier</inlineHelpText>
    <label>CCID</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>