UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Centrex_Count__c.field-meta.xml
<CustomField>
    <fullName>Centrex_Count__c</fullName>
    <description>Number of Centrex Lines for the customer</description>
    <inlineHelpText>Number of Centrex Lines for the customer?</inlineHelpText>
    <label>Centrex Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>