UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Centrex_Line__c.field-meta.xml
<CustomField>
    <fullName>Centrex_Line__c</fullName>
    <description>Is the customer a Centrex Line customer</description>
    <inlineHelpText>Is the customer a Centrex Line customer?</inlineHelpText>
    <label>Centrex Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>