UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Centrium_Churn_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Centrium_Churn_Indicator__c</fullName>
    <label>Centrium Churn Indicator</label>
    <length>15</length>
    <type>Text</type>
</CustomField>