UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Centrium_Value_Tier__c.field-meta.xml
<CustomField>
    <fullName>Centrium_Value_Tier__c</fullName>
    <label>Centrium Value Tier</label>
    <length>15</length>
    <type>Text</type>
</CustomField>