UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/CEOLastName__c.field-meta.xml
<CustomField>
    <fullName>CEOLastName__c</fullName>
    <label>CEOLastName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>