UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/CEOTitle__c.field-meta.xml
<CustomField>
    <fullName>CEOTitle__c</fullName>
    <label>CEOTitle</label>
    <length>30</length>
    <type>Text</type>
</CustomField>