UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Channel_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Channel_Affiliation__c</fullName>
    <inlineHelpText>Select a single primary channel for on-boarding</inlineHelpText>
    <label>Channel Affiliation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>