UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Channel_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Channel_Affiliations__c</fullName>
    <label>On-Boarding Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aggregators</fullName>
            </value>
            <value>
                <fullName>Big Box</fullName>
            </value>
            <value>
                <fullName>Commercial Agents</fullName>
            </value>
            <value>
                <fullName>Community Connections</fullName>
            </value>
            <value>
                <fullName>CROSS SELL</fullName>
            </value>
            <value>
                <fullName>Dealer Channel - Commercial</fullName>
            </value>
            <value>
                <fullName>DIGITAL PAID SEARCH</fullName>
            </value>
            <value>
                <fullName>Door to Door - Residential</fullName>
            </value>
            <value>
                <fullName>Event Manager</fullName>
            </value>
            <value>
                <fullName>ISP</fullName>
            </value>
            <value>
                <fullName>Local Engagement</fullName>
            </value>
            <value>
                <fullName>NON-CHANNEL SUPPORT COMPANY</fullName>
            </value>
            <value>
                <fullName>Premier Retail</fullName>
            </value>
            <value>
                <fullName>Retail Agent - Residential</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>