UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Churn_Difference__c.field-meta.xml
<CustomField>
    <fullName>Churn_Difference__c</fullName>
    <label>Churn Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>