UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk__c</fullName>
    <description>Created for Centriam data on the company home page on the Master Record Type 12/21 TMM</description>
    <label>Churn Risk</label>
    <length>10</length>
    <type>Text</type>
</CustomField>