UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/CLLI8__c.field-meta.xml
<CustomField>
    <fullName>CLLI8__c</fullName>
    <description>Updated/Created by Randy Gromlich for D&amp;B/MLR data 3/5/2020</description>
    <inlineHelpText>The dominant Central Office for the wire center that serves the physical area where the business resides.</inlineHelpText>
    <label>CLLI8</label>
    <length>8</length>
    <type>Text</type>
</CustomField>