UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/CLM_User_Permission__c.field-meta.xml
<CustomField>
    <fullName>CLM_User_Permission__c</fullName>
    <formula>$Permission.Vlocity_CLM_Toolbar_Visibility</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLM User Permission</label>
    <type>Checkbox</type>
</CustomField>