UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Closest_Comp__c.field-meta.xml
<CustomField>
    <fullName>Closest_Comp__c</fullName>
    <description>Field created per SFDC CASE 00649823 given the Marketing and Strategy direction provided by Jesse Beller. New Field reqeusted by Randy Gromlich.</description>
    <label>Closest Comp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>