UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Cloud_Connect_Capable__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Connect_Capable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated/Created by Randy Gromlich for D&amp;B/MLR data 3/5/2020</description>
    <inlineHelpText>Service address has been identified as being CloudConnect capable</inlineHelpText>
    <label>Cloud Connect Capable</label>
    <type>Checkbox</type>
</CustomField>