UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <label>Cohort</label>
    <type>TextArea</type>
</CustomField>