UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Collections_Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Collections_Days_to_Complete__c</fullName>
    <formula>Collections_Review_Date_Received__c - Collections_Review_Date_Submitted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collections - Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>