UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Collections_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Collections_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collections Review Complete</label>
    <type>Checkbox</type>
</CustomField>