UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Collections_Review_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Collections_Review_Date_Received__c</fullName>
    <label>Collections Review Date Returned</label>
    <type>Date</type>
</CustomField>