UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Collections_Review_Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Collections_Review_Date_Submitted__c</fullName>
    <label>Collections Review Date Submitted</label>
    <type>Date</type>
</CustomField>