UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Commercial_Segment__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Segment__c</fullName>
    <description>Updated/Created by Randy Gromlich for D&amp;B/MLR data 3/5/2020</description>
    <inlineHelpText>Segmentation based on Global Employees grouped as: SMB (&lt;30 employees), 30-99, 100-249, 250-499, 500-99, 1,000+. All entities with a Global family carry the same segmentation.</inlineHelpText>
    <label>Commercial Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>30-99</fullName>
            </value>
            <value>
                <fullName>100-249</fullName>
            </value>
            <value>
                <fullName>250-499</fullName>
            </value>
            <value>
                <fullName>500-999</fullName>
            </value>
            <value>
                <fullName>1000+</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
                <isActive>false</isActive>
                <label>Advanced</label>
            </value>
            <value>
                <fullName>Emergent - Complex</fullName>
                <isActive>false</isActive>
                <label>Emergent - Complex</label>
            </value>
            <value>
                <fullName>Emergent - Simple</fullName>
                <isActive>false</isActive>
                <label>Emergent - Simple</label>
            </value>
            <value>
                <fullName>Enterprise</fullName>
                <isActive>false</isActive>
                <label>Enterprise</label>
            </value>
            <value>
                <fullName>Null</fullName>
                <isActive>false</isActive>
                <label>Null</label>
            </value>
            <value>
                <fullName>Small - Complex</fullName>
                <isActive>false</isActive>
                <label>Small - Complex</label>
            </value>
            <value>
                <fullName>Small - Simple</fullName>
                <isActive>false</isActive>
                <label>Small - Simple</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>