UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Communication_Spend__c.field-meta.xml
<CustomField>
    <fullName>Communication_Spend__c</fullName>
    <description>Amount company spends on communications</description>
    <inlineHelpText>Amount company spends on communications</inlineHelpText>
    <label>Communication Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>