UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Address__c</fullName>
    <label>Company Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>