UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Company_Date_of_Formation__c.field-meta.xml
<CustomField>
    <fullName>Company_Date_of_Formation__c</fullName>
    <label>Date Entity Was Formed</label>
    <type>Date</type>
</CustomField>