UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Company_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Entity_Name__c</fullName>
    <description>Used for Sitetracker Vendor record type</description>
    <label>Company/Entity Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>