UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Company_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_External_ID__c</fullName>
    <description>External ID used by Sitetracker</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID used by Sitetracker</inlineHelpText>
    <label>Company External ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>