UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>