UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Competitor_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Agreement__c</fullName>
    <description>Used to determine type of competitor agreement.</description>
    <inlineHelpText>Used to determine type of competitor agreement.</inlineHelpText>
    <label>Competitor Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Video Bulk</fullName>
            </value>
            <value>
                <fullName>Data Bulk</fullName>
            </value>
            <value>
                <fullName>Video &amp; Data Bulk</fullName>
            </value>
            <value>
                <fullName>Exclusive Marketing</fullName>
            </value>
            <value>
                <fullName>NonExclusive Marketing</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>