UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Competitor_Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Contract_Expiration_Date__c</fullName>
    <label>Competitor Contract Expiration Date</label>
    <type>Date</type>
</CustomField>