UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <description>Used to determine Competitor</description>
    <inlineHelpText>Used to select MDU Competitor</inlineHelpText>
    <label>Competitor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Altice</fullName>
            </value>
            <value>
                <fullName>Atlantic Broadband</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>Cox</fullName>
            </value>
            <value>
                <fullName>DIRECTV</fullName>
            </value>
            <value>
                <fullName>DISH</fullName>
            </value>
            <value>
                <fullName>Gigamonster</fullName>
            </value>
            <value>
                <fullName>Grande Communications</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>WOW</fullName>
            </value>
            <value>
                <fullName>AT&amp;T -Wireline</fullName>
            </value>
            <value>
                <fullName>AT&amp;T - Wireless</fullName>
            </value>
            <value>
                <fullName>T-mobile</fullName>
            </value>
            <value>
                <fullName>Verizon Wireless</fullName>
            </value>
            <value>
                <fullName>GiGstreem</fullName>
            </value>
            <value>
                <fullName>Starry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>