UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Competitor_Revenue_Share__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Revenue_Share__c</fullName>
    <description>Used to determine if competitor is paying Rev Share to property.</description>
    <inlineHelpText>Used to determine if competitor is paying Rev Share to property.</inlineHelpText>
    <label>Competitor Revenue Share</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>