UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Congestion_Ind__c.field-meta.xml
<CustomField>
    <fullName>Congestion_Ind__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field was created because the data needed to be captured for the d&amp;b section on the accounts. We got the data from the MLR (Market Lead Request) File.</description>
    <label>Congestion Ind</label>
    <type>Checkbox</type>
</CustomField>