UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Connect_Cloud_Intent__c.field-meta.xml
<CustomField>
    <fullName>Connect_Cloud_Intent__c</fullName>
    <description>Intent Topics for array: Business Continuity, Cloud Backup &amp; Recovery, Disaster Recovery, Fault Tolerance, Hybrid Working / Hybrid Workplace.

For Zoominfo Intent Integration, introduced in 12/07 Release, 2023.</description>
    <inlineHelpText>Zoominfo Intent Integration</inlineHelpText>
    <label>Connect Cloud Intent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>