UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/ContinueServicesDuringWorkStoppage_List__c.field-meta.xml
<CustomField>
    <fullName>ContinueServicesDuringWorkStoppage_List__c</fullName>
    <inlineHelpText>Supplier agrees to continue services in the event of a Frontier work stoppage?</inlineHelpText>
    <label>Continue Services During Work Stoppage?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>