UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/ContinueServicesDuringWorkStoppage_Text__c.field-meta.xml
<CustomField>
    <fullName>ContinueServicesDuringWorkStoppage_Text__c</fullName>
    <label>Continue Services During Work Stoppage?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>