UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Contract_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manager_Approval__c</fullName>
    <label>Contract Manager Approval</label>
    <length>8</length>
    <type>Text</type>
</CustomField>