UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Contract_Manager_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manager_Approval_Date__c</fullName>
    <label>Contract Manager Decision Date</label>
    <type>Date</type>
</CustomField>