UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Contract_Manager_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manager_Approval_Status__c</fullName>
    <label>Contract Manager Decision Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>