UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Contract_Manager_Approved__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manager_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Manager Approved</label>
    <type>Checkbox</type>
</CustomField>