UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Contract_Manager_Comments__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manager_Comments__c</fullName>
    <description>Large text box for comments/notes from Contract Manager used during &quot;Request Contract&quot; review process.</description>
    <label>Contract Manager Comments</label>
    <type>TextArea</type>
</CustomField>