UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Contract_Mgr_Approve_Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Contract_Mgr_Approve_Days_to_Complete__c</fullName>
    <formula>Contract_Manager_Approval_Date__c - Contract_Manager_Approval_Request_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Mgr. Decision Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>