UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/ConvertedFromLead__c.field-meta.xml
<CustomField>
    <fullName>ConvertedFromLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ConvertedFromLead</label>
    <type>Checkbox</type>
</CustomField>