UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Copy_Legal_Address_to_Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Copy_Legal_Address_to_Service_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Legal Address to Service Address</label>
    <type>Checkbox</type>
</CustomField>