UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Copy_Service_to_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Copy_Service_to_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copy the Service Address into the Billing Address when the checkbox is True.</description>
    <inlineHelpText>Check this field to Copy Service to the Billing Address automatically.</inlineHelpText>
    <label>Copy Service to Billing Address</label>
    <type>Checkbox</type>
</CustomField>