UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Corp_Levels_to_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Corp_Levels_to_Decision_Maker__c</fullName>
    <description>Updated/Created by Randy Gromlich for D&amp;B/MLR data 3/5/2020</description>
    <inlineHelpText>Hierarchy distance to the rollup Decision HQ.</inlineHelpText>
    <label>Corp Levels to Decision-Maker</label>
    <length>2</length>
    <type>Text</type>
</CustomField>