UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Cottage_File_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Cottage_File_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cottage File Indicator</label>
    <type>Checkbox</type>
</CustomField>