UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/CPE_Composite_Ranking_Score__c.field-meta.xml
<CustomField>
    <fullName>CPE_Composite_Ranking_Score__c</fullName>
    <label>CPE Composite Ranking Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>