UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Created_by_ID__c.field-meta.xml
<CustomField>
    <fullName>Created_by_ID__c</fullName>
    <formula>CASESAFEID(  CreatedById )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by ID</label>
    <type>Text</type>
</CustomField>