UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Credit_Check_Pass_Fail__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Pass_Fail__c</fullName>
    <label>Collections Review Pass/Fail</label>
    <length>10</length>
    <type>Text</type>
</CustomField>