UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Credit_Screening_Initiator__c.field-meta.xml
<CustomField>
    <fullName>Credit_Screening_Initiator__c</fullName>
    <description>The person who pushes the Send for Credit Screening button</description>
    <label>Credit Screening Initiator</label>
    <type>Email</type>
</CustomField>