UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/CSR_ID__c.field-meta.xml
<CustomField>
    <fullName>CSR_ID__c</fullName>
    <formula>$User.CSR_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR ID</label>
    <type>Text</type>
</CustomField>