UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/CSR_Type__c.field-meta.xml
<CustomField>
    <fullName>CSR_Type__c</fullName>
    <label>CSR Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>