UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/CTF_State__c.field-meta.xml
<CustomField>
    <fullName>CTF_State__c</fullName>
    <label>CTF State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>