UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/ctfind__c.field-meta.xml
<CustomField>
    <fullName>ctfind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ctfind</label>
    <type>Checkbox</type>
</CustomField>