UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Current_Data_Penetration__c.field-meta.xml
<CustomField>
    <fullName>Current_Data_Penetration__c</fullName>
    <label>Current Data Penetration</label>
    <length>222</length>
    <type>Text</type>
</CustomField>