UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Current_Frontier_Customer__c.field-meta.xml
<CustomField>
    <fullName>Current_Frontier_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Frontier Customer?</label>
    <type>Checkbox</type>
</CustomField>