UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Current_Frontier_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Frontier_Customer_Number__c</fullName>
    <label>Current Frontier Customer Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>