UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Current_Penetration__c.field-meta.xml
<CustomField>
    <fullName>Current_Penetration__c</fullName>
    <description>Used to determine the product and services at the property.</description>
    <inlineHelpText>Used to determine the product and services at the property.</inlineHelpText>
    <label>Current Penetration %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>