UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Current_Penetration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Penetration_Date_Time__c</fullName>
    <label>Current Penetration % Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>