UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/CurrentDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentDate__c</fullName>
    <label>CurrentDate</label>
    <type>Date</type>
</CustomField>