UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/CUST_ACCT_NBR_M6__c.field-meta.xml
<CustomField>
    <fullName>CUST_ACCT_NBR_M6__c</fullName>
    <label>CUST_ACCT_NBR_M6</label>
    <length>25</length>
    <type>Text</type>
</CustomField>