UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Cust_Sales_Rep_Cd__c.field-meta.xml
<CustomField>
    <fullName>Cust_Sales_Rep_Cd__c</fullName>
    <label>CRIS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>