UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Cust_Seg_NmTxt__c.field-meta.xml
<CustomField>
    <fullName>Cust_Seg_NmTxt__c</fullName>
    <label>Cust Seg NmTxt</label>
    <length>50</length>
    <type>Text</type>
</CustomField>