UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/CustAccount_Intralata_Carrier__c.field-meta.xml
<CustomField>
    <fullName>CustAccount_Intralata_Carrier__c</fullName>
    <label>Intralata Carrier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>