UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Customer_Health_Details__c.field-meta.xml
<CustomField>
    <fullName>Customer_Health_Details__c</fullName>
    <label>Customer Health Details</label>
    <type>TextArea</type>
</CustomField>