UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Customer_Health_Factors__c.field-meta.xml
<CustomField>
    <fullName>Customer_Health_Factors__c</fullName>
    <label>Customer Health Factors</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Health_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generally Pleased</fullName>
            </value>
            <value>
                <fullName>Billing Question</fullName>
            </value>
            <value>
                <fullName>Product/Feature Question</fullName>
            </value>
            <value>
                <fullName>Pricing Issue</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
            <value>
                <fullName>Responsiveness Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>